change predictor variable in logit regression such that it is binary; cluster standard errors by 5-year period

--- a/the_new_trademark_complexity.tex
+++ b/the_new_trademark_complexity.tex
@@ -444,19 +444,19 @@ These are generalizations, of course. Many applications buck this trend: they ar
 
 At first glance, one might interpret the rise of high-code applications as merely one facet of a broader uptick in filings for nontraditional marks—whether those marks consist of visual elements, sound, scent, or something else. Indeed, previous empirical studies on trademark prosecution have shown that applications for ``nontraditional'' (i.e., nonverbal) marks have increased in recent decades, both at the USPTO and at some of its counterparts in other countries.\footnote{\textit{See} Carolina Castaldi, \textit{The Economics and Management of Non-Traditional Trademarks}, \textit{in} \textsc{The Protection of Non-Traditional Trademarks} 257, 265 fig.13.1; \textit{Sound Marks}, \textit{supra} note~\ref{supra23}, at 2397 fig.I; \textit{see also} Mitchell Adams \& Amanda Scardamaglia, \textit{Non-Traditional Trademarks: An Empirical Study}, \textit{in} \textsc{The Protection of Non-Traditional Trademarks} 37, 45 fig.2.1.} In particular, applications for marks composed of visual elements—and, specifically, applications for marks consisting of color alone—have increased at the USPTO when measured in absolute numbers of applications per year, consistent with the data shown in Figure~\ref{fig:2}.\footnote{\textit{Owning Colors}, \textit{supra} note~\ref{supra23}, at 2539–40 figs.XI, XII, XIII. With respect to marks consisting of color alone, this increase may in part be due to the U.S. Supreme Court's 1995 decision in \textit{Qualitex Co. v. Jacobson Products Co.}, which held that a single color could be a trademark, as long as it had acquired distinctiveness. \textit{See id.}} Similarly, many have observed in qualitative terms that nontraditional marks consisting of highly specific trade dress—e.g., the shape of a handbag—are increasingly common, particularly among luxury brands.\footnote{Irene Calboli \& Martin Senftleben, Introduction, \textit{in} \textsc{The Protection of Non-Traditional Trademarks} 1; Irene Calboli, \textit{Chocolate, Fashion, Toys and Cabs: The Misunderstood Distinctiveness of Non-Traditional Trademarks}, 49 \textsc{Int'l Rev of Intell. Prop. \& Competition L.} 1 (2018).}  But, at least at the USPTO, the increase in absolute numbers of nontraditional marks is more a symptom of ballooning numbers of trademark filings in general and less an indicator of a trend unique to nontraditional marks. In fact, the share of nontraditional applications has \emph{decreased} if we account for the broader increase in applications for all marks, including word marks. In contrast, as shown in Figure~\ref{fig:6}, the share of high-code applications has increased, even accounting for the broader increase in all applications. Thus, visually complex nonword marks are following a different trajectory from nontraditional marks in general.
 
-One possible reason for this phenomenon is that it represents a legal strategy. Is is plausible that businesses may be increasingly filing for complex nonword marks because greater complexity increases their chances of securing a registration. Recall Section \ref{sec:1}.\ref{subsec:1B}'s discussion of the \textit{Seabrook} test for the inherent distinctiveness of trade dress. As the USPTO and courts have indicated, that test in substance deems a mark inherently distinctive if it is unique or uncommon in its commercial context.\footnote{See \textit{supra} note [X].} For example, proposing a simple, unadorned green circle on a coffee cup (\includegraphics[scale = 0.2]{RN_5754170_drawing})\footnote{Registration No. 5754170.} as a trademark for coffee drinks is not likely to pass the \textit{Seabrook} test, because circles of any color are common shapes in all fields.\footnote{\textit{In re} Starbucks Corp., Nos. 85792872 \& 86689423, 2019 TTAB LEXIS 8 (T.T.A.B. July 17, 2018) [non-precedential].} In contrast, using the Starbucks logo (\includegraphics[scale = 0.125]{RN_4538053_drawing}) for coffee drinks easily passes the \textit{Seabrook} test, because a circle containing a siren wearing a crown adorned with a star is not necessarily common in that field. Intuitively, the more visual elements one adds to a mark, the less likely it is that all of the elements in the mark, taken as a whole, will be commonplace in the mark's commercial context. So, theoretically, businesses could have an incentive to pack their applications with additional visual elements to better their chance of registering their mark.
+One possible reason for this phenomenon is that it represents a legal strategy. It is plausible that businesses may be increasingly filing for complex nonword marks because greater complexity increases their chances of securing a registration. Recall Section \ref{sec:1}.\ref{subsec:1B}'s discussion of the \textit{Seabrook} test for the inherent distinctiveness of trade dress. As the USPTO and courts have indicated, that test in substance deems a mark inherently distinctive if it is unique or uncommon in its commercial context.\footnote{See \textit{supra} note [X].} For example, proposing a simple, unadorned green circle on a coffee cup (\includegraphics[scale = 0.2]{RN_5754170_drawing})\footnote{Registration No. 5754170.} as a trademark for coffee drinks is not likely to pass the \textit{Seabrook} test, because circles of any color are common shapes in all fields.\footnote{\textit{In re} Starbucks Corp., Nos. 85792872 \& 86689423, 2019 TTAB LEXIS 8 (T.T.A.B. July 17, 2018) [non-precedential].} In contrast, using the Starbucks logo (\includegraphics[scale = 0.125]{RN_4538053_drawing}) for coffee drinks easily passes the \textit{Seabrook} test, because a circle containing a siren wearing a crown adorned with a star is not necessarily common in that field. Intuitively, the more visual elements one adds to a mark, the less likely it is that all of the elements in the mark, taken as a whole, will be commonplace in the mark's commercial context. So, theoretically, businesses could have an incentive to pack their applications with additional visual elements to better their chance of registering their mark.
 
 Conventional wisdom may also support that account. When a client seeks to register a word mark that risks a rejection by the USPTO for being nondistinctive, trademark lawyers routinely suggest that the client combine the work mark with a nonverbal, visual element in order to reduce that risk.\footnote{[Cites.] \url{https://www.cll.com/OnMyMindBlog/adding-a-word-or-distinctive-design-to-a-mark-sometimes-can-avoid-a-likelihood-of-confusion}; \url{https://smithhopen.com/2020/12/01/the-right-to-your-name/}; cf. Fromer \& McKenna. Lawyers who make this suggestion will also generally note that the client should be open to including a disclaimer of the mark's verbal element, if the USPTO expresses the view that the matter should be disclaimed.} The logic here is that adding a visual element to a word mark subjects the mark to the \textit{Seabrook} analysis, because the mark is now not only a string of characters but a design as well. And as long as that design is not exceedingly common, \textit{Seabrook} is a relatively permissive test. This logic is only one step away from a strategy of adding more visual elements to a nonword mark (as opposed to a word mark) in order to increase its chances of receiving USPTO approval.
 
-Indeed, the data suggest such a strategy could be effective. To test whether having more design search codes improves an applicant's odds of receiving USPTO approval, I estimate a logistic regression of the form \
+Indeed, the data suggest such a strategy could be effective. To test whether more complex word marks have improved odds of receiving USPTO approval, I estimate a logistic regression of the form \
 \begin{equation}
-Approved_i=\beta_0+\beta_1N_i+\beta_2X_i
+\log{\frac{P}{1-P}}=\beta_0+\beta_1highcode_i+\beta_2X_i
 \end{equation}
-where $Approved_i$ is an indicator variable equal to 1 if application $i$ was approved and 0 otherwise, $N_i$ is the number of design search codes assigned to application $i$, and $X_i$ is a vector of controls for (1) whether application $i$ was filed by an attorney or pro se, (2) the year in which application $i$ was filed, and (3) the international classes of goods/services in which application $i$ was filed. I exclude any applications filed in 2022 or later, because, as noted, there is a nontrivial number of applications filed in the last couple of years on which the USPTO has not yet reached a final decision. Table~\ref{table:1} shows the intercept and coefficient of this regression model under my preferred specification:
+where $P$ is the probability that the application was approved, $highcode_i$ is an indicator variable that equals 1 if application $i$ has more than 5 codes (i.e., is a high-code mark) and 0 otherwise, and $X_i$ is a vector of controls for (1) whether application $i$ was filed by an attorney or pro se, (2) the 5-year period in which application $i$ was filed, and (3) the international classes of goods/services in which application $i$ was filed. I cluster standard errors by 5-year period to account for the possibility of similar treatment of nonword marks at similar times in the USPTO's institutional development. I also exclude any applications filed in 2022 or later, because, as noted, there is a nontrivial number of applications filed in the last couple of years on which the USPTO has not yet reached a final decision. Table~\ref{table:1} shows the intercept and coefficient of this regression model under this specification:
 
 \input{table_1.tex} \par
 
-\noindent In the table above, the ``estimate'' value of n indicates that, holding everything else constant, each additional design search code in a nonword trademark application increases an applicant's odds of USPTO approval by about $e^{0.0905}-1 \approx 10\%$.\footnote{[NTD: Because no nonword mark can have zero design search codes, this model effectively gives all marks a 10\% chance of securing approval by virtue of merely existing. To consider this point in the next draft.]} This increase is highly statistically significant (with a p-value of 0.000), although the absolute percentage change ($\sim10\%$) is somewhat modest. However, that percentage change becomes quite substantial where an application has more than five codes ($\ge 72\%$) and even more so where an application has more than ten codes ($\ge 170\%$). In other words, having a high number of codes can significantly better an applicant's odds of receiving USPTO approval. Although an approved mark doesn't automatically register (there are additional procedural requirements before it can do so), receiving approval means that the USPTO has determined that the mark itself meets all substantive statutory requirements for registration. In any case, number of design search codes is also a statistically significant predictor of whether a mark ultimately registers—each additional design search code increases odds of registration by about 4\%. Given these results, it at least plausible that the recent increase in marks with high numbers of design codes represents a strategy by applicants to increase their odds of approval and registration. 
+\noindent In the table above, the ``estimate'' value of n indicates that, holding everything else constant, have more than five design search codes increases an application's odds of USPTO approval by about $e^[0.1462]-1 \approx [16]\%$. This increase is highly statistically significant (with a p-value of 0.000), although the absolute percentage change ($\sim15\%$) is not overwhelming. However, that percentage can be quite substantial in context. Imagine an application has 9 to 10 odds of approval (or roughly a 47\% chance of approval). Increasing those odds by 15\%—resulting in odds of 10.35 to 10—makes that application more likely to be approved than not approved. In other words, having a high number of codes can substantially better an applicant's odds of receiving USPTO approval. Given these results, it at least plausible that the recent increase in marks with high numbers of design codes represents a strategy by applicants to increase their odds of approval and registration. 
 
 But this strategy doesn't explain everything. \textit{Seabrook} was decided in 1977, about a decade before the beginning of the time period examined in my empirical analysis. It doesn't take much trial-and-error to figure out that (1) \textit{Seabrook} effectively says that unusual nonword marks are likelier to be registered, and (2) one way to make a mark unusual is to add more things to that mark. Thus, one might expect that a strategy of packing visual elements into a mark would take off as soon as a few applicants realized it worked. And that strategy would then remain popular—that is, applicants would employ that strategy at roughly consistent rates—as long as the law remains the same.\footnote{Somewhat analogously, consider that there were pronounced increases (1) in applications for color marks after the Supreme Court's decision in \textit{Qualitex}, which held that colors could be marks upon a showing of secondary meaning, and (2) in LGBTQ+-oriented applications in the years immediately following the Supreme Court's decision in \textit{Matal v. Tam}, which struck down the Lanham Act's prior prohibition on the registration of ``disparag[ing]'' marks. \textit{Owning Colors}, \textit{supra} note~\ref{surpa23}, at [X]; Michael Goodyear, \textit{Queer Trademarks}, 2024 \textsc{U. Ill. L. Rev.} 163.} But that's not what we see at all. Instead, Figure~\ref{fig:7} shows that marks with the highest number of design search codes seem, first, to moderately \textit{decrease} as a percentage of total applications during the late '80s and early '90s, after which they pick up substantially. Although it's possible that this is the natural pattern by which applicants adopted a visual element–packing strategy, it seems likelier that other factors are at play.
 
